--- a/src/partials/navigation.html
+++ b/src/partials/navigation.html
@@ -8,7 +8,7 @@
         height="32"
         class="me-2"
       />
-      <span id="navbar-brand-site-name"></span>
+      <span id="navbar-brand-site-name">Gordano Model Flying Club</span>
     </a>
     <span id="navbar-alert" class="is-hidden"
       ><i class="fa-regular fa-bell"></i
